fix overflow

--- a/frontend/src/assets/css/base.scss
+++ b/frontend/src/assets/css/base.scss
@@ -1,12 +1,12 @@
 html {
   -webkit-text-size-adjust: none;
-  touch-action: pan-y;
+  touch-action: none;
 }
 
 body {
   -webkit-text-size-adjust: none;
   margin: 0;
-  touch-action: pan-y;
+  touch-action: none;
   overscroll-behavior: none;
 }
 
@@ -493,6 +493,11 @@ input[type="checkbox"] {
 
 @media screen and (min-width: 375px) and (max-width: 743px){
   .main-wrapper-component {
+    height: 100vh;
+  }
+  body {
+    position: fixed;
+    width: 100vw;
     height: 100vh;
   }
   span {
