--- a/frontend/src/components/wrappers/mainWrapperComponent/main-wrapper.scss
+++ b/frontend/src/components/wrappers/mainWrapperComponent/main-wrapper.scss
@@ -2,4 +2,5 @@
   display: flex;
   align-items: stretch;
   flex-direction: column;
+  overflow: auto;
 }
